tests/negative/types/tc_binary.yvr
x: INT
x = 10 + true
x = true & false